; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/time/extr_timekeeping.c_getrawmonotonic.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/time/extr_timekeeping.c_getrawmonotonic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.timespec, i32 }
%struct.timespec = type { i32 }

@timekeeper = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @getrawmonotonic(%struct.timespec* %0) #0 {
  %2 = alloca %struct.timespec*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store %struct.timespec* %0, %struct.timespec** %2, align 8
  br label %5

5:                                                ; preds = %10, %1
  %6 = call i64 @read_seqbegin(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @timekeeper, i32 0, i32 1))
  store i64 %6, i64* %3, align 8
  %7 = call i32 (...) @timekeeping_get_ns_raw()
  store i32 %7, i32* %4, align 4
  %8 = load %struct.timespec*, %struct.timespec** %2, align 8
  %9 = bitcast %struct.timespec* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 4 bitcast (%struct.TYPE_2__* @timekeeper to i8*), i64 4, i1 false)
  br label %10

10:                                               ; preds = %5
  %11 = load i64, i64* %3, align 8
  %12 = call i64 @read_seqretry(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @timekeeper, i32 0, i32 1), i64 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %5, label %14

14:                                               ; preds = %10
  %15 = load %struct.timespec*, %struct.timespec** %2, align 8
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @timespec_add_ns(%struct.timespec* %15, i32 %16)
  ret void
}

declare dso_local i64 @read_seqbegin(i32*) #1

declare dso_local i32 @timekeeping_get_ns_raw(...) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i64 @read_seqretry(i32*, i64) #1

declare dso_local i32 @timespec_add_ns(%struct.timespec*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
